# Template-for-JUCE-Plugin

./: CMakeLists.txt  LICENSE  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
